# mcp-google-sheets

./: .gitignore  README.md  pyproject.toml
examples/: claude_desktop_config.json  service-account-setup.md
src/mcp_google_sheets/: __init__.py  __main__.py  server.py
tests/: test_smoke.py
